tests/valid/testcase04.c
// valid casting char -> int

int main(void) {
    char x;
    int y;

    x = 'a';
    y = (int) x;
}